# tfxed

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  components-77961d85b36ca3f.css  effect_timeline.txt  index.html  main-ae5b73b8853bd67a.css  tachyonfx-ftl-web-2adcf8824324479d.js  tachyonfx-ftl-web-2adcf8824324479d_bg.wasm  tachyonfx-ftl-web-407eb056d7bb5c2c.js  tachyonfx-ftl-web-407eb056d7bb5c2c_bg.wasm  tachyonfx-ftl-web-489917c5c78fceaa.js  tachyonfx-ftl-web-489917c5c78fceaa_bg.wasm  tachyonfx-ftl-web-71d4fee877dfec65.js  tachyonfx-ftl-web-71d4fee877dfec65_bg.wasm  tachyonfx-ftl-web-aa1fccdce193ebab.js  tachyonfx-ftl-web-aa1fccdce193ebab_bg.wasm  tachyonfx-ftl-web-e7aacba200910fde.js  tachyonfx-ftl-web-e7aacba200910fde_bg.wasm  tfxed-web-93bc90bb59d8060b.js  tfxed-web-93bc90bb59d8060b_bg.wasm
.github/workflows/: deploy-gh-pages.yml
scripts/: completions-a5bc95adf2c79ecd.js  editor-8e8d95b8f737f2d9.js  query-params-235aed30b622e2ff.js  query-params-842100b0b0ae6963.js  query-params-90238a496169ee0c.js  query-params-b245276836ab0b25.js  query-params-cd1390607650431f.js  query-params-f0055269116a68bb.js  query-params-f096ff8d759087a6.js  redirect-20dde1909c443e1e.js  redirect-e8ac50f218547f3.js
src/: app.rs  effects.rs  event.rs  event_handler.rs  gruvbox.rs  main.rs  main_web.rs  terminal.rs  tui.rs
tachyonfx-ftl-cli/: Cargo.toml
tachyonfx-ftl-cli/src/: event_handler.rs  main.rs  tui.rs
tachyonfx-ftl-core/: Cargo.toml
tachyonfx-ftl-core/src/: app.rs  effects.rs
tachyonfx-ftl-web/: Cargo.toml  Trunk.toml  index.html
tachyonfx-ftl-web/scripts/: completions.js  editor.js  query-params.js  redirect.js
tachyonfx-ftl-web/src/: event_handler.rs  interop.rs  main.rs
tachyonfx-ftl-web/styles/: components.css  main.css
tfxed-cli/: Cargo.toml
tfxed-cli/src/: main.rs
tfxed-core/: Cargo.toml
tfxed-core/src/: app.rs  dispatcher.rs  event.rs  lib.rs  widgets.rs
tfxed-web/: Cargo.toml  Trunk.toml  index.html
tfxed-web/src/: interop.rs  lib.rs  main.rs
