[package]
name = "tfxed"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "An editor for tachyonfx effect DSL"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.3"
ratzilla = { version = "0.0.5", optional = true }
tachyonfx = { version = "0.13.0", default-features = false, features = ["dsl"] }
crossterm = { version = "0.28.1", optional = true }
bitflags = "2.9.0"
ansi-to-tui = "7.0.0"
web-sys = { version = "0.3.77", features = ["Location", "Window"], optional = true }
base64 = "0.22.1"
percent-encoding = "2.3.1"
web-time = { version = "1.1.0", optional = true }
miniz_oxide = {  version = "0.7", optional = true }

[features]
default = []
web-backend = ["ratzilla", "web-sys", "web-time", "miniz_oxide", "tachyonfx/web-time"]
crossterm-backend = ["crossterm", "ratatui/crossterm", "tachyonfx/crossterm"]

[[bin]]
name = "tfxed"
path = "src/main.rs"
required-features = ["crossterm-backend"]

[[bin]]
name = "tfxed-web"
path = "src/main_web.rs"
required-features = ["web-backend"]
