[package]
name = "tfxed-cli"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "CLI terminal interface for tachyonfx effect DSL editor"

[dependencies]
tfxed-core = { path = "../tachyonfx-ftl-core" }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
color-eyre = "0.6.3"
tachyonfx = { version = "0.15.0", default-features = false, features = ["dsl", "crossterm"] }
ansi-to-tui = "7.0.0"

[[bin]]
name = "tfxed"
path = "src/main.rs"
