[package]
name = "tfxed-core"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "Core library for tachyonfx effect DSL editor"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
bitflags = "2.9.0"
tachyonfx = { version = "0.15.0", default-features = false, features = ["dsl"] }
ansi-to-tui = "7.0.0"
wasm-bindgen = { version = "0.2.100", optional = true }
web-time = { version = "1.1.0", optional = true }

[features]
web-backend = ["web-time", "wasm-bindgen"]