[package]
name = "tachyonfx-ftl-web"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "Web interface for tachyonfx effect DSL editor"

[dependencies]
tfxed-core = { path = "../tachyonfx-ftl-core", features = ["web-backend"] }
ratatui = { version = "0.29.0", default-features = false }
#ratzilla = { path = "../../ratzilla" }
ratzilla = { version = "0.1.0" }
console_error_panic_hook = "0.1"
eyre = "0.6.12"
tachyonfx = { version = "0.15.0", default-features = false, features = ["dsl", "web-time"] }
web-sys = { version = "0.3.77", features = ["Location", "Window", "console"] }
wasm-bindgen = "0.2.100"

[[bin]]
name = "tachyonfx-ftl-web"
path = "src/main.rs"